# bigbrother

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mise.toml
.agents/artifacts/: 001-watchexec-vs-notify.md  002-ignore-and-ignore-files.md  003-source-filtering.md  004-test-coverage-review.md  005-initial-follow-up.md
.agents/plans/: 001-initial.md
.agents/prompts/: 001-initial.md
src/: lib.rs  path.rs  prelude.rs  source.rs  track.rs
