[package]
name = "bigbrother"
description = "Git-aware file tracker (list & watch) for async Rust apps"
version = "0.2.0"
edition = "2024"
authors = ["Sasha Koss <koss@nocorp.me>"]
license = "MIT"

[features]
default = []
source-filter = ["dep:tokei"]

[dependencies]
anyhow = "1"
ignore = "0.4"
ignore-files = "3"
notify = "8"
tokei = { version = "14", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
git2 = "0.20"
